--- a/src/components/Card/top-bottom.astro
+++ b/src/components/Card/top-bottom.astro
@@ -4,7 +4,7 @@ import { Box, Cluster } from '#astro-custom-layout-components/index.ts';
 
 <Box borderWidth="0" padding="var(--s0)">
   <Cluster justify="space-between" align="baseline">
-    <div class="truncate fb3">
+    <div class="fb3 truncate">
       <slot name="left" />
     </div>
     <div class="fb1">
