--- a/src/pages/demo/colums-demo.astro
+++ b/src/pages/demo/colums-demo.astro
@@ -2,7 +2,7 @@
 import { Image } from 'astro:assets';
 
 import Layout from '#layouts/Layout.astro';
-import { getRandomPic } from '#lib/index.ts';
+import { getRandomPicRemote } from '#lib/index.ts';
 
 const W = '300';
 const H = '200';
@@ -11,58 +11,148 @@ const H = '200';
 <Layout>
   <div class="container">
     <div class="image_container">
-      <Image src={getRandomPic(W, H)} width={W} height={H} alt="alt text" />
+      <Image
+        src={getRandomPicRemote(W, H)}
+        width={W}
+        height={H}
+        alt="alt text"
+      />
     </div>
     <div class="image_container">
-      <Image src={getRandomPic(W, H)} width={W} height={H} alt="alt text" />
+      <Image
+        src={getRandomPicRemote(W, H)}
+        width={W}
+        height={H}
+        alt="alt text"
+      />
     </div>
     <div class="image_container">
-      <Image src={getRandomPic(W, H)} width={W} height={H} alt="alt text" />
+      <Image
+        src={getRandomPicRemote(W, H)}
+        width={W}
+        height={H}
+        alt="alt text"
+      />
     </div>
     <div class="image_container">
-      <Image src={getRandomPic(W, H)} width={W} height={H} alt="alt text" />
+      <Image
+        src={getRandomPicRemote(W, H)}
+        width={W}
+        height={H}
+        alt="alt text"
+      />
     </div>
     <div class="image_container">
-      <Image src={getRandomPic(W, H)} width={W} height={H} alt="alt text" />
+      <Image
+        src={getRandomPicRemote(W, H)}
+        width={W}
+        height={H}
+        alt="alt text"
+      />
     </div>
     <div class="image_container">
-      <Image src={getRandomPic(W, H)} width={W} height={H} alt="alt text" />
+      <Image
+        src={getRandomPicRemote(W, H)}
+        width={W}
+        height={H}
+        alt="alt text"
+      />
     </div>
     <div class="image_container">
-      <Image src={getRandomPic(W, H)} width={W} height={H} alt="alt text" />
+      <Image
+        src={getRandomPicRemote(W, H)}
+        width={W}
+        height={H}
+        alt="alt text"
+      />
     </div>
     <div class="image_container">
-      <Image src={getRandomPic(W, H)} width={W} height={H} alt="alt text" />
+      <Image
+        src={getRandomPicRemote(W, H)}
+        width={W}
+        height={H}
+        alt="alt text"
+      />
     </div>
     <div class="image_container">
-      <Image src={getRandomPic(W, H)} width={W} height={H} alt="alt text" />
+      <Image
+        src={getRandomPicRemote(W, H)}
+        width={W}
+        height={H}
+        alt="alt text"
+      />
     </div>
     <div class="image_container">
-      <Image src={getRandomPic(W, H)} width={W} height={H} alt="alt text" />
+      <Image
+        src={getRandomPicRemote(W, H)}
+        width={W}
+        height={H}
+        alt="alt text"
+      />
     </div>
     <div class="image_container">
-      <Image src={getRandomPic(W, H)} width={W} height={H} alt="alt text" />
+      <Image
+        src={getRandomPicRemote(W, H)}
+        width={W}
+        height={H}
+        alt="alt text"
+      />
     </div>
     <div class="image_container">
-      <Image src={getRandomPic(W, H)} width={W} height={H} alt="alt text" />
+      <Image
+        src={getRandomPicRemote(W, H)}
+        width={W}
+        height={H}
+        alt="alt text"
+      />
     </div>
     <div class="image_container">
-      <Image src={getRandomPic(W, H)} width={W} height={H} alt="alt text" />
+      <Image
+        src={getRandomPicRemote(W, H)}
+        width={W}
+        height={H}
+        alt="alt text"
+      />
     </div>
     <div class="image_container">
-      <Image src={getRandomPic(W, H)} width={W} height={H} alt="alt text" />
+      <Image
+        src={getRandomPicRemote(W, H)}
+        width={W}
+        height={H}
+        alt="alt text"
+      />
     </div>
     <div class="image_container">
-      <Image src={getRandomPic(W, H)} width={W} height={H} alt="alt text" />
+      <Image
+        src={getRandomPicRemote(W, H)}
+        width={W}
+        height={H}
+        alt="alt text"
+      />
     </div>
     <div class="image_container">
-      <Image src={getRandomPic(W, H)} width={W} height={H} alt="alt text" />
+      <Image
+        src={getRandomPicRemote(W, H)}
+        width={W}
+        height={H}
+        alt="alt text"
+      />
     </div>
     <div class="image_container">
-      <Image src={getRandomPic(W, H)} width={W} height={H} alt="alt text" />
+      <Image
+        src={getRandomPicRemote(W, H)}
+        width={W}
+        height={H}
+        alt="alt text"
+      />
     </div>
     <div class="image_container">
-      <Image src={getRandomPic(W, H)} width={W} height={H} alt="alt text" />
+      <Image
+        src={getRandomPicRemote(W, H)}
+        width={W}
+        height={H}
+        alt="alt text"
+      />
     </div>
   </div>
 </Layout>
@@ -74,8 +164,5 @@ const H = '200';
 
   .image_container:nth-child(6) {
     column-span: all;
-  }
-  Image {
-    width: 100%;
   }
 </style>
