--- a/src/pages/store.astro
+++ b/src/pages/store.astro
@@ -1,18 +1,14 @@
 ---
 // import Box from '#astro-custom-layout-components/Box/index.astro';
-
 import DescriptionList from '#components/DescriptionList/index.astro';
-import Layout from '#layouts/Layout.astro';
+import StoreNav from '#components/tw-demos/StoreNav.tsx';
+import Layout from '#layouts/SimpleLayout.astro';
 
 // import FeaturedPost from '#components/FeaturedPost.astro';
 // import AppDrawer from '#ui/web-components/AppDrawer.astro';
 ---
 
 <!-- heroImage="/blog-placeholder-about.jpg" -->
-<Layout title="About Me" description="Lorem ipsum dolor sit amet" maxW="60ch">
-  <DescriptionList
-    heading="Applicant Information"
-    subheading="Personal details and application."
-  />
-  <!-- </Stack> -->
+<Layout title="About Me" description="Lorem ipsum dolor sit amet">
+  <StoreNav client:load />
 </Layout>
