--- a/src/pages/demo/imposter-demo.astro
+++ b/src/pages/demo/imposter-demo.astro
@@ -1,7 +1,5 @@
 ---
-import { Code } from 'astro:components';
-
-import { Box, Grid,Imposter } from '#astro-custom-layout-components/index.ts';
+import { Grid } from '#astro-custom-layout-components/index.ts';
 import SkeletonCard from '#components/SkeletonCard.astro';
 import Layout from '#layouts/Layout.astro';
 ---
