--- a/src/pages/tags/[tag].astro
+++ b/src/pages/tags/[tag].astro
@@ -11,7 +11,7 @@ export async function getStaticPaths() {
   const publishsedPosts = await getCollection('blog');
 
   const uniqueTags = [
-    ...new Set(publishsedPosts.map(({ data }) => data.tags ?? []).flat()),
+    ...new Set(publishsedPosts.flatMap(({ data }) => data.tags ?? [])),
   ];
 
   return uniqueTags.map((tag) => ({
