--- a/src/pages/demo/cq-switcher-demo.astro
+++ b/src/pages/demo/cq-switcher-demo.astro
@@ -8,7 +8,7 @@ import Layout from '#layouts/Layout.astro';
 <Layout
   title="test Me"
   description="Lorem ipsum dolor sit amet"
-  centerWidth="100%"
+  maxW="100%"
 >
   <Box>
     <Box borderWidth="0">
