--- a/src/pages/demo/sidebar-demo.astro
+++ b/src/pages/demo/sidebar-demo.astro
@@ -4,7 +4,7 @@ import Layout from '#layouts/Layout.astro';
 ---
 
 <!-- heroImage="/blog-placeholder-about.jpg" -->
-<Layout title="test Me" description="sidebar test" centerWidth="100ch">
+<Layout title="test Me" description="sidebar test" maxW="100ch">
   <Sidebar side="left" contentMin="20%" sideWidth="30ch">
     <Stack splitAfter={2}>
       <Box><p>xxx</p></Box>
