--- a/src/pages/demo/cluster-demo.astro
+++ b/src/pages/demo/cluster-demo.astro
@@ -3,7 +3,7 @@ import { Box, Cluster } from '#astro-custom-layout-components/index.ts';
 import Layout from '#layouts/Layout.astro';
 ---
 
-<Layout title="Cluster Demo" centerWidth="100%">
+<Layout title="Cluster Demo" maxW="100%">
   <wa-card with-header class="card-header">
     <div slot="header">
       Cluster - resize the browser window
