--- a/src/pages/demo/harmonic-demo.astro
+++ b/src/pages/demo/harmonic-demo.astro
@@ -10,7 +10,7 @@
 //   return value
 // }
 
-import { Box, Cluster } from '#astro-custom-layout-components/index.ts';
+// import { Box, Cluster } from '#astro-custom-layout-components/index.ts';
 import Layout from '#layouts/Layout.astro';
 ---
 
