--- a/src/components/Card.astro
+++ b/src/components/Card.astro
@@ -1,6 +1,6 @@
 ---
 import { Box } from '#astro-custom-layout-components/index.ts';
-import Prose from '#components/Prose.astro';
+// import Prose from '#components/Prose.astro';
 
 interface Props {
   headline?: string;
