--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -3,7 +3,7 @@ import Center from '#astro-custom-layout-components/Center/index.astro';
 import Cover from '#astro-custom-layout-components/Cover/index.astro';
 import type { RmUnitType } from '#astro-custom-layout-components/Types.js';
 import BaseHead from '#components/BaseHead.astro';
-import Footer from '#components/Footer.astro';
+// import Footer from '#components/Footer.astro';
 import Header from '#components/Header.astro';
 
 interface Props {
